Added raw protocol to control devices not yet supported

--- a/protocols/Makefile
+++ b/protocols/Makefile
@@ -1,4 +1,4 @@
-all: kaku_switch.o kaku_dimmer.o kaku_old.o elro.o protocols.o
+all: kaku_switch.o kaku_dimmer.o kaku_old.o elro.o raw.o protocols.o
 
 kaku_switch.o: kaku_switch.c kaku_switch.h ../protocol.h
 	make trunc && gcc -Wall -I. -I.. -c kaku_switch.c
@@ -11,9 +11,12 @@ kaku_old.o: kaku_old.c kaku_old.h ../protocol.h
 
 elro.o: elro.c elro.h ../protocol.h
 	make trunc && gcc -Wall -I. -I.. -c elro.c && make trunc
+
+raw.o: raw.c raw.h ../protocol.h
+	make trunc && gcc -Wall -I. -I.. -c raw.c && make trunc
 	
 protocols.o:
-	ld -r kaku_switch.o kaku_dimmer.o kaku_old.o elro.o -o protocols.o
+	ld -r kaku_switch.o kaku_dimmer.o kaku_old.o elro.o raw.o -o protocols.o
 	
 trunc:
 	test ! -s protocols.o || rm protocols.o
