--- a/daemons/Makefile
+++ b/daemons/Makefile
@@ -22,6 +22,4 @@ lirc.o: hardware.h $(includes)
 	
 trunc:
 	test ! -s lirc.o || rm lirc.o
-	test ! -s ../libs.o || rm ../libs.o	
-	test ! -s ../send || rm ../send
-	test ! -s ../receive || rm ../receive
+	make trunc -C ../
