Restructured and created dynamic Makefiles

--- a/libs/Makefile
+++ b/libs/Makefile
@@ -1,17 +1,17 @@
 CC = gcc
-CFLAGS = -Wall -I. -I.. -I../libs/
+CFLAGS = -Wall -I. -I..
 SRC = $(wildcard *.c)
 OBJS = $(SRC:.c=.o)
 HEADERS := $(SRC:.c=.h)
-INCLUDES = $(wildcard ../libs/*.h)
+INCLUDES = $(wildcard ../*.h)
 
-all: $(OBJS) protocols.o
+all: $(OBJS) libs.o
 
 %.o: %.c %.h $(INCLUDES)
 	$(CC) $(CFLAGS) -c $(patsubst %.o,%.c,$@)
 
-protocols.o:
-	ld -L/usr/local/lib -r $(OBJS) -o protocols.o
+libs.o:
+	ld -L/usr/local/lib -r $(OBJS) -o libs.o
 	
 clean:
 	rm *.o >/dev/null 2>&1 || true
