Allow devices that share the similar protocol, more work on the upcoming config file support, and various bugfixes

--- a/libs/Makefile
+++ b/libs/Makefile
@@ -1,5 +1,5 @@
-CC = gcc
-CFLAGS = -O3 -g -Wall -static -I. -I..
+CC = $(CROSS_COMPILE)gcc
+CFLAGS = -O3 -g -Wall -static -I. -I.. -I/usr/include/
 SRC = $(wildcard *.c)
 OBJS = $(SRC:.c=.o)
 HEADERS := $(SRC:.c=.h)
@@ -7,10 +7,10 @@ HEADERS := $(SRC:.c=.h)
 all: $(OBJS) libs.o
 
 %.o: %.c %.h
-	$(CC) $(CFLAGS) -c $(patsubst %.o,%.c,$@)
+	$(CC) $(CFLAGS) -c $(patsubst %.o,%.c,$@) $(LIBS)
 
 libs.o: $(OBJS)
-	ld -L/usr/local/lib -r $(OBJS) -o libs.o
+	$(CROSS_COMPILE)ld -L/usr/local/lib -r $(OBJS) -o libs.o
 	
 clean:
 	rm *.o >/dev/null 2>&1 || true
