--- a/lirc/Makefile
+++ b/lirc/Makefile
@@ -1,4 +1,4 @@
-CC = gcc
+CC = $(CROSS_COMPILE)gcc
 CFLAGS = -O3 -g -Wall -static -I. -I..
 SRC = $(wildcard *.c)
 OBJS = $(SRC:.c=.o)
@@ -10,7 +10,7 @@ all: $(OBJS) lirc.o
 	$(CC) $(CFLAGS) -c $(patsubst %.o,%.c,$@)
 
 lirc.o: $(OBJS)
-	ld -L/usr/local/lib -r $(OBJS) -o lirc.o
+	$(CROSS_COMPILE)ld -L/usr/local/lib -r $(OBJS) -o lirc.o
 
 clean:
 	rm *.o >/dev/null 2>&1 || true
