--- a/protocols/Makefile
+++ b/protocols/Makefile
@@ -1,4 +1,4 @@
-CC = gcc
+CC = $(CROSS_COMPILE)gcc
 CFLAGS = -O3 -g -Wall -static -I. -I.. -I../libs/
 SRC = $(wildcard *.c)
 OBJS = $(SRC:.c=.o)
@@ -11,7 +11,7 @@ all: $(OBJS) protocols.o
 	$(CC) $(CFLAGS) -c $(patsubst %.o,%.c,$@)
 
 protocols.o: $(OBJS)
-	ld -L/usr/local/lib -r $(OBJS) -o protocols.o
+	$(CROSS_COMPILE)ld -L/usr/local/lib -r $(OBJS) -o protocols.o
 
 clean:
 	rm *.o >/dev/null 2>&1 || true
