--- a/libs/Makefile
+++ b/libs/Makefile
@@ -17,7 +17,7 @@ endif
 ifneq (, $(findstring amd64, $(SYS)))
 	OSFLAGS = -O3 -march=native -mtune=native -mfpmath=sse -Wno-conversion
 endif
-CFLAGS =-ffast-math $(OSFLAGS) -Wfloat-equal -Wshadow -Wpointer-arith -Wcast-align -Wstrict-overflow=5 -Wwrite-strings -Waggregate-return -Wcast-qual -Wswitch-default -Wswitch-enum -Wformat=2 -g -Wall -static -I. -I.. -I/usr/include/
+CFLAGS =-ffast-math $(OSFLAGS) -Wfloat-equal -Wshadow -Wpointer-arith -Wcast-align -Wstrict-overflow=5 -Wwrite-strings -Waggregate-return -Wcast-qual -Wswitch-default -Wswitch-enum -Wformat=2 -g -Wall -I. -I.. -I/usr/include/
 SRC = $(wildcard *.c)
 OBJS = $(SRC:.c=.o)
 HEADERS := $(SRC:.c=.h)
@@ -25,7 +25,7 @@ HEADERS := $(SRC:.c=.h)
 all: json.o $(OBJS) libs.o
 
 json.o: json.c json.h
-	$(GCC) -ffast-math $(OSFLAGS) -Wno-conversion -g -static -I. -I.. -I/usr/include/ -c $(patsubst %.o,%.c,$@) $(LIBS)
+	$(GCC) -ffast-math $(OSFLAGS) -Wno-conversion -g -I. -I.. -I/usr/include/ -c $(patsubst %.o,%.c,$@) $(LIBS)
 
 %.o: %.c %.h
 	$(GCC) $(CFLAGS) -c $(patsubst %.o,%.c,$@) $(LIBS)
