The code can now be used with or without the lirc_rpi kernel module

--- a/libs/Makefile
+++ b/libs/Makefile
@@ -27,6 +27,9 @@ all: json.o $(OBJS) libs.o
 json.o: json.c json.h
 	$(GCC) -ffast-math $(OSFLAGS) -Wno-conversion -g -I. -I.. -I/usr/include/ -c $(patsubst %.o,%.c,$@) $(LIBS)
 
+wiringPi.o: wiringPi.c wiringPi.h
+	$(GCC) -ffast-math $(OSFLAGS) -Wno-conversion -g -I. -I.. -I/usr/include/ -pthread -lm -c $(patsubst %.o,%.c,$@) $(LIBS)
+	
 %.o: %.c %.h
 	$(GCC) $(CFLAGS) -c $(patsubst %.o,%.c,$@) $(LIBS)
 
