Fixed more memory leaks, fixed the makefile so we don't have to run "make clean" all the time, and fixed cross-compilation

--- a/libs/lirc/Makefile
+++ b/libs/lirc/Makefile
@@ -30,5 +30,7 @@ all: $(OBJS) lirc.o
 lirc.o: $(OBJS)
 	$(CROSS_COMPILE)ld -L/usr/local/lib -r $(OBJS) -o lirc.o
 
+dist-clean: clean	
+
 clean:
 	rm *.o >/dev/null 2>&1 || true
