Fixed small leakages / bugs in debug and learn

--- a/libs/websockets/Makefile
+++ b/libs/websockets/Makefile
@@ -15,7 +15,7 @@ ifneq (, $(findstring arm, $(SYS)))
 	endif
 endif
 ifneq (, $(findstring amd64, $(SYS)))
-	OSFLAGS = -fPIC -Ofast -march=native -mtune=native -mfpmath=sse
+	OSFLAGS = -fPIC -O3 -march=native -mtune=native -mfpmath=sse
 endif
 CFLAGS = -ffast-math $(OSFLAGS) -g -Wall -static -I. -I.. -I../pilight/
 SRC = $(wildcard *.c)
