--- a/libs/hardwares/Makefile
+++ b/libs/hardwares/Makefile
@@ -17,19 +17,19 @@ endif
 ifneq (, $(findstring amd64, $(SYS)))
 	OSFLAGS = -O3 -fPIC -march=native -mtune=native -mfpmath=sse -Wno-conversion
 endif
-CFLAGS = -ffast-math $(OSFLAGS) -Wfloat-equal -Wshadow -Wpointer-arith -Wcast-align -Wstrict-overflow=5 -Wwrite-strings -Waggregate-return -Wcast-qual -Wswitch-default -Wswitch-enum -Wformat=2 -g -Wall -I. -I.. -I../libs/pilight/
+CFLAGS = -ffast-math $(OSFLAGS) -Wfloat-equal -Wshadow -Wpointer-arith -Wcast-align -Wstrict-overflow=5 -Wwrite-strings -Waggregate-return -Wcast-qual -Wswitch-default -Wswitch-enum -Wformat=2 -g -Wall -I. -I.. -I../pilight/
 SRC = $(wildcard *.c)
 OBJS = $(SRC:.c=.o)
 HEADERS := $(SRC:.c=.h)
-INCLUDES = $(wildcard ../libs/*.h) ../libs/libs.o
+INCLUDES = $(wildcard ../libs/*.h) ../libs/pilight.o
 
-all: $(OBJS) protocols.o
+all: $(OBJS) hardwares.o
 
 %.o: %.c %.h $(INCLUDES)
 	$(GCC) $(CFLAGS) -c $(patsubst %.o,%.c,$@)
 
-protocols.o: $(OBJS)
-	$(CROSS_COMPILE)ld -L/usr/local/lib -r $(OBJS) -o protocols.o
+hardwares.o: $(OBJS)
+	$(CROSS_COMPILE)ld -L/usr/local/lib -r $(OBJS) -o hardwares.o
 
 dist-clean: clean
 	
