Multiple ID support and All support, and fixed relay bug
1) This commit adds support for multiple ID's per device. Check
the README.md on how this new syntax looks.
2) This commit also adds support for the All function of certain
protocols. The config lib will now match only those ID's that are
communicated by the protocol. In case of the All function of
the arctech protocol, only the "id" matters, so the "unit"
isn't communicated. The config will then search all devices
matching only this "id" value and change it's state. When both
the "id" and "unit" are communicated only those devices matching
both will get updated. Just like the actual devices.
3) This commit also fixes a small bug in the relay protocol in
which the currently used hardware mode wasn't correctly
identified and thereby incorrectly complaining about reservated
gpio pins.

--- a/libs/pilight/Makefile
+++ b/libs/pilight/Makefile
@@ -20,18 +20,17 @@ endif
 CFLAGS =-ffast-math $(OSFLAGS) -Wfloat-equal -Wshadow -Wpointer-arith -Wcast-align -Wstrict-overflow=5 -Wwrite-strings -Waggregate-return -Wcast-qual -Wswitch-default -Wswitch-enum -Wformat=2 -g -Wall -I. -I.. -I/usr/include/
 SRC = $(wildcard *.c)
 OBJS = $(SRC:.c=.o)
-HEADERS := $(SRC:.c=.h)
 
-all: json.o $(OBJS) pilight.o
+all: json.o wiringPi.o $(OBJS) pilight.o
 
 json.o: json.c json.h
-	$(GCC) -ffast-math $(OSFLAGS) -Wno-conversion -g -I. -I.. -I/usr/include/ -c $(patsubst %.o,%.c,$@) $(LIBS)
-
+	$(GCC) -ffast-math $(OSFLAGS) -Wno-conversion -g -I. -I.. -I/usr/include/ -c $(patsubst %.o,%.c,$@)
+	
 wiringPi.o: wiringPi.c wiringPi.h
-	$(GCC) -ffast-math $(OSFLAGS) -Wno-conversion -g -I. -I.. -I/usr/include/ -pthread -lm -c $(patsubst %.o,%.c,$@) $(LIBS)
+	$(GCC) -ffast-math $(OSFLAGS) -Wno-conversion -g -I. -I.. -I/usr/include/ -pthread -lm -c $(patsubst %.o,%.c,$@)
 	
 %.o: %.c %.h
-	$(GCC) $(CFLAGS) -c $(patsubst %.o,%.c,$@) $(LIBS)
+	$(GCC) $(CFLAGS) -c $(patsubst %.o,%.c,$@)
 
 pilight.o: $(OBJS)
 	$(CROSS_COMPILE)ld -L/usr/local/lib -r $(OBJS) -o pilight.o
