--- a/pilight.h.in
+++ b/pilight.h.in
@@ -45,7 +45,7 @@
 #cmakedefine PROTOCOL_NEXA_SWITCH
 #cmakedefine PROTOCOL_RAW
 #cmakedefine PROTOCOL_RELAY
-#cmakedefine PROTOCOL_ELRO
+#cmakedefine PROTOCOL_ELRO_SWITCH
 #cmakedefine PROTOCOL_SELECTREMOTE
 
 /* Hardware support */
