--- a/Makefile.old
+++ b/Makefile.old
@@ -35,7 +35,7 @@ $(SUBDIRS):
 all: $(LIBS) libpilight.so.1 libpilight.a $(PROGAMS) 
 
 libpilight.so.1: $(LIBS)
-	$(GCC) $(LIBS) -shared -o libpilight.so.1 -lpthread -lm
+	$(GCC) $(LIBS) -shared -o libpilight.so.1 -lpthread -lm -ldl
 	
 libpilight.a: $(LIBS)
 	$(CROSS_COMPILE)ar -rsc libpilight.a $(LIBS)
@@ -87,7 +87,7 @@ install:
 	install -m 0644 web/apple-touch-icon-iphone-retina-display.png /usr/local/share/pilight/
 	install -m 0644 web/apple-touch-icon-ipad.png /usr/local/share/pilight/
 	install -m 0644 web/apple-touch-icon-iphone.png /usr/local/share/pilight/	
-	install -m 0755 init/pilight /etc/init.d/
+	#install -m 0755 init/pilight /etc/init.d/
 	update-rc.d pilight defaults
 
 	[ ! -f /usr/local/bin/gpio ] && install -m 0755 deps/gpio /usr/local/bin/ || true
