And forgot to add it to the pilight.h define skeleton

--- a/pilight.h.in
+++ b/pilight.h.in
@@ -43,6 +43,7 @@
 #cmakedefine PROTOCOL_KAKU_DIMMER
 #cmakedefine PROTOCOL_KAKU_OLD
 #cmakedefine PROTOCOL_KAKU_SWITCH
+#cmakedefine PROTOCOL_KAKU_SCREEN
 #cmakedefine PROTOCOL_NEXA_SWITCH
 #cmakedefine PROTOCOL_RAW
 #cmakedefine PROTOCOL_RELAY
