--- a/pilight.h.in
+++ b/pilight.h.in
@@ -41,7 +41,8 @@
 #cmakedefine PROTOCOL_INTERTECHNO_SWITCH
 #cmakedefine PROTOCOL_INTERTECHNO_OLD
 #cmakedefine PROTOCOL_KAKU_DIMMER
-#cmakedefine PROTOCOL_KAKU_OLD
+#cmakedefine PROTOCOL_KAKU_SWITCH_OLD
+#cmakedefine PROTOCOL_KAKU_SCREEN_OLD
 #cmakedefine PROTOCOL_KAKU_SWITCH
 #cmakedefine PROTOCOL_KAKU_SCREEN
 #cmakedefine PROTOCOL_NEXA_SWITCH
