--- a/libs/pilight/Makefile
+++ b/libs/pilight/Makefile
@@ -1,5 +1,9 @@
 GCC = $(CROSS_COMPILE)gcc
 SYS := $(shell $(GCC) -dumpmachine)
+
+ifdef CROSS_COMPILE
+	INCLUDE = -isystem/usr/include/ -isystem/usr/include/x86_64-linux-gnu/
+endif
 ifneq (, $(findstring x86_64, $(SYS)))
 	OSFLAGS = -Ofast -fPIC -march=native -mtune=native -mfpmath=sse -Wconversion -Wunreachable-code -Wstrict-prototypes 
 endif
@@ -17,23 +21,31 @@ endif
 ifneq (, $(findstring amd64, $(SYS)))
 	OSFLAGS = -O3 -fPIC -march=native -mtune=native -mfpmath=sse -Wno-conversion
 endif
-CFLAGS =-ffast-math $(OSFLAGS) -Wfloat-equal -Wshadow -Wpointer-arith -Wcast-align -Wstrict-overflow=5 -Wwrite-strings -Waggregate-return -Wcast-qual -Wswitch-default -Wswitch-enum -Wformat=2 -g -Wall -isystem. -isystem..
+CFLAGS = -ffast-math $(OSFLAGS) -Wfloat-equal -Wshadow -Wpointer-arith -Wcast-align -Wstrict-overflow=5 -Wwrite-strings -Waggregate-return -Wcast-qual -Wswitch-default -Wswitch-enum -Wformat=2 -g -Wall -isystem. -isystem..
 SRC = $(wildcard *.c)
-OBJS = $(SRC:.c=.o)
+OBJS = $(filter-out wiringPi.o http_lib.o json.o update.o, $(SRC:.c=.o))
 
-all: json.o wiringPi.o $(OBJS) pilight.o
+
+all: json.o wiringPi.o http_lib.o update.o $(OBJS) pilight.o
 
 json.o: json.c json.h
+	$(GCC) -ffast-math $(OSFLAGS) -Wno-conversion -g -isystem. -isystem.. -c $(patsubst %.o,%.c,$@)
+
+http_lib.o: http_lib.c http_lib.h
+	$(info $(GCC))
 	$(GCC) -ffast-math $(OSFLAGS) -Wno-conversion -g -isystem. -isystem.. -c $(patsubst %.o,%.c,$@)
 	
 wiringPi.o: wiringPi.c wiringPi.h
 	$(GCC) -ffast-math $(OSFLAGS) -Wno-conversion -g -isystem. -isystem.. -pthread -lm -c $(patsubst %.o,%.c,$@)
 
-%.o: %.c %.h
+update.o: update.c update.h
+	$(GCC) $(CFLAGS) -lz -c $(patsubst %.o,%.c,$@) -isystem. -isystem.. $(INCLUDE)
+
+%.o: %.c %.h 
 	$(GCC) $(CFLAGS) -c $(patsubst %.o,%.c,$@)
 
-pilight.o: $(OBJS)
-	$(CROSS_COMPILE)ld -L/usr/local/lib -r $(OBJS) -o pilight.o
+pilight.o: $(OBJS) json.o http_lib.o wiringpi.o update.o
+	$(CROSS_COMPILE)ld -L/usr/local/lib -r $(OBJS) json.o http_lib.o wiringpi.o update.o -o pilight.o
 
 dist-clean: clean
 
