Added draft of the Clarus protocol

--- a/pilight.h.in
+++ b/pilight.h.in
@@ -31,6 +31,7 @@
 
 #cmakedefine PROTOCOL_ALECTO
 #cmakedefine PROTOCOL_CHACON
+#cmakedefine PROTOCOL_CLARUS
 #cmakedefine PROTOCOL_COGEX_SWITCH
 #cmakedefine PROTOCOL_COCO_SWITCH
 #cmakedefine PROTOCOL_DS18B20
