--- a/pilight.h.in
+++ b/pilight.h.in
@@ -32,6 +32,7 @@
 #cmakedefine PROTOCOL_COGEX_SWITCH
 #cmakedefine PROTOCOL_COCO_SWITCH
 #cmakedefine PROTOCOL_DS18B20
+#cmakedefine PROTOCOL_DHT22
 #cmakedefine PROTOCOL_DIO_SWITCH
 #cmakedefine PROTOCOL_GENERIC_DIMMER
 #cmakedefine PROTOCOL_GENERIC_SWITCH
