--- a/pilight.h.in
+++ b/pilight.h.in
@@ -33,8 +33,9 @@
 #cmakedefine PROTOCOL_BCM2835
 #cmakedefine PROTOCOL_CHACON
 #cmakedefine PROTOCOL_CLARUS
-#cmakedefine PROTOCOL_COGEX_SWITCH
 #cmakedefine PROTOCOL_COCO_SWITCH
+#cmakedefine PROTOCOL_COGEX_SWITCH
+#cmakedefine PROTOCOL_CONRAD_RSL_SWITCH
 #cmakedefine PROTOCOL_DS18B20
 #cmakedefine PROTOCOL_DHT22
 #cmakedefine PROTOCOL_DIO_SWITCH
