--- a/pilight.h.in
+++ b/pilight.h.in
@@ -30,6 +30,7 @@
 /* Protocol support */
 
 #cmakedefine PROTOCOL_ALECTO
+#cmakedefine PROTOCOL_CLARUS
 #cmakedefine PROTOCOL_COGEX_SWITCH
 #cmakedefine PROTOCOL_COCO_SWITCH
 #cmakedefine PROTOCOL_DS18B20
