--- a/pilight.h.in
+++ b/pilight.h.in
@@ -36,6 +36,7 @@
 #cmakedefine PROTOCOL_COCO_SWITCH
 #cmakedefine PROTOCOL_COGEX_SWITCH
 #cmakedefine PROTOCOL_CONRAD_RSL_SWITCH
+#cmakedefine PROTOCOL_CONRAD_RSL_CONTACT
 #cmakedefine PROTOCOL_DS18B20
 #cmakedefine PROTOCOL_DHT22
 #cmakedefine PROTOCOL_DIO_SWITCH
